coreloop/core_loop.h

/***************** UNAVOIDABLE GLOBAL STATE ******************/
// flag to tell main we are doing a soft reset
extern bool soft_reset_flag;
// loop count in timer interrupt
extern volatile uint16_t loop_count_min, loop_count_max;
enum averaging_mode {
    AVG_INT32,
    AVG_INT_40_BITS,
    AVG_FLOAT
};
struct time_counters {
    uint64_t heartbeat_counter;
    uint64_t resettle_counter;
    uint64_t cdi_wait_counter;
    uint64_t cdi_dispatch_counter;
};
// core state base contains the crucial state that is dumped with every metadata packet

struct core_state_base {
    uint64_t uC_time;
    uint32_t time_32;
    uint16_t time_16;
    uint16_t TVS_sensors[4]; // temperature and voltage sensors, registers 1.0V, 1.8V, 2.5V and Temp
    uint16_t loop_count_min, loop_count_max;
    // former sequencer state starts here
    uint8_t gain [NINPUT]; // this defines the commanded gain state (can be auto)
    uint16_t gain_auto_min[NINPUT];
    uint16_t gain_auto_mult[NINPUT];
    struct route_state route[NINPUT];
    uint8_t Navg1_shift, Navg2_shift;   // Stage1 (FW) and Stage2 (uC) averaging
    uint8_t notch; // 0 = disable, 1 = x4, 2 = x16, 3=x64, 4=x256
    uint8_t Navgf; // frequency averaging
    uint8_t hi_frac, med_frac;
    uint8_t bitslice[NSPECTRA]; // for spectra 0x1F is all MSB, 0xFF is auto
    uint8_t bitslice_keep_bits; // how many bits to keep for smallest spectra
    uint8_t format; // output format to save data in
    uint8_t reject_ratio; // how far we should be to reject stuff, zero to remove rejection
    uint8_t reject_maxbad; // how many need to be bad to reject.
    uint16_t tr_start, tr_stop, tr_avg_shift; // time resolved start, stop and averaging
    // former sequencer state ends here

    uint8_t averaging_mode; // perform stage 2 averaging using int32, 40 bit encoding or float

    uint32_t errors;
    uint16_t corr_products_mask; // which of 16 products to be used, starting with LSB
    uint8_t actual_gain[NINPUT]; // this defines the actual gain state (can only be low, med, high);
    uint8_t actual_bitslice[NSPECTRA];
    uint16_t spec_overflow;  // mean specta overflow mask
    uint16_t notch_overflow; // notch filter overflow mask
    struct ADC_stat ADC_stat[4];
    bool spectrometer_enable; // spectrometer_enable is true when FFT enegine is running
    bool calibrator_enable; // calibrator enable is true will enable calibrator with enabling the FFT engine.
    uint32_t rand_state;

    uint16_t weight, weight_current;
    uint16_t num_bad_min_current, num_bad_max_current; // actual number of bad bins in the previous integration
    uint16_t num_bad_min, num_bad_max; // actual number of bad bins in the previous integration


};
struct cdi_stats {
    uint32_t cdi_total_command_count;
    uint32_t cdi_packets_sent;
    uint64_t cdi_bytes_sent;
};
struct delayed_cdi_sending {
    uint32_t appId;
    uint32_t tr_appId;
    uint16_t int_counter; // counter that will be decremented every timer interrupt
    uint8_t format;
    uint8_t prod_count; // product ID that needs to be sent
    uint8_t tr_count; // time-resolved packet number that needs to be sent
    uint8_t cal_count; // number of calibrator packets that need to be sent;
    uint16_t Nfreq; // number of frequencies that actually need to be sent
    uint16_t Navgf; // frequency averaging factor
    uint32_t packet_id;
    uint32_t cal_packet_id;
    uint32_t cal_appId;
    uint32_t cal_size, cal_packet_size;
};
struct watchdog_config {
    uint8_t FPGA_max_temp;
    uint8_t watchdogs_enabled;

};
// core state cointains the seuqencer state and the base state and a number of utility variables
struct core_state {
    struct core_state_base base;
    struct cdi_stats cdi_stats;
    struct calibrator_state cal;
    // A number be utility values
    struct delayed_cdi_sending cdi_dispatch;
    struct time_counters timing;
    struct watchdog_config watchdog;
    uint16_t cdi_wait_spectra;
    uint16_t avg_counter;
    uint32_t unique_packet_id;
    uint8_t leading_zeros_min[NSPECTRA];
    uint8_t leading_zeros_max[NSPECTRA];
    uint8_t housekeeping_request;
    uint8_t range_adc, resettle, request_waveform, request_eos;
    bool tick_tock;
    bool drop_df;
    uint32_t heartbeat_packet_count;
    int8_t flash_slot;
    uint8_t cmd_arg_high[CMD_BUFFER_SIZE], cmd_arg_low[CMD_BUFFER_SIZE];
    // pointeres to the beginning and end of commands, also used during sequence upload
    uint16_t cmd_ptr, cmd_end;
    // are we uploading -- if so block sequences
    bool sequence_upload;
    // for loops
    uint8_t loop_depth; // how many nested loops
    uint16_t loop_start[MAX_LOOPS];
    uint8_t loop_count[MAX_LOOPS];
    uint32_t cmd_counter;
    uint16_t dispatch_delay; // number of timer interrupts to wait before sending CDI
    uint16_t reg_address; // address of the register to be written (for commands that do that)
    int32_t reg_value; // value to be written to the register
    int8_t bitslicer_action_counter;  // counting how many times in a row we have changed bit slicer to prevent infinite loop
    uint32_t fft_time;
    bool fft_computed;
};
//extern struct core_state state;
extern bool soft_reset_flag;
// main function
void core_loop(struct core_state*);
// process a CDI command
bool process_cdi(struct core_state*);
bool process_watchdogs (struct core_state*);
void cmd_soft_reset(uint8_t arg, struct core_state* state);
// starts / stops / restarts the spectrometer
void RFS_stop(struct core_state*);
// CRC
uint32_t CRC(const void* data, size_t size);