pycoreloop/core_loop.py


struct_core_state_base._pack_ = 1
struct_core_state_base.__slots__ = [
    'uC_time',
    'time_32',
    'time_16',
    'TVS_sensors',
    'loop_count_min',
    'loop_count_max',
    'gain',
    'gain_auto_min',
    'gain_auto_mult',
    'route',
    'Navg1_shift',
    'Navg2_shift',
    'notch',
    'Navgf',
    'hi_frac',
    'med_frac',
    'bitslice',
    'bitslice_keep_bits',
    'format',
    'reject_ratio',
    'reject_maxbad',
    'tr_start',
    'tr_stop',
    'tr_avg_shift',
    'averaging_mode',
    'errors',
    'corr_products_mask',
    'actual_gain',
    'actual_bitslice',
    'spec_overflow',
    'notch_overflow',
    'ADC_stat',
    'spectrometer_enable',
    'calibrator_enable',
    'rand_state',
    'weight',
    'weight_current',
    'num_bad_min_current',
    'num_bad_max_current',
    'num_bad_min',
    'num_bad_max',
]
struct_core_state_base._fields_ = [
    ('uC_time', c_uint64),
    ('time_32', c_uint32),
    ('time_16', c_uint16),
    ('TVS_sensors', c_uint16 * int(4)),
    ('loop_count_min', c_uint16),
    ('loop_count_max', c_uint16),
    ('gain', c_uint8 * int(4)),
    ('gain_auto_min', c_uint16 * int(4)),
    ('gain_auto_mult', c_uint16 * int(4)),
    ('route', struct_route_state * int(4)),
    ('Navg1_shift', c_uint8),
    ('Navg2_shift', c_uint8),
    ('notch', c_uint8),
    ('Navgf', c_uint8),
    ('hi_frac', c_uint8),
    ('med_frac', c_uint8),
    ('bitslice', c_uint8 * int(16)),
    ('bitslice_keep_bits', c_uint8),
    ('format', c_uint8),
    ('reject_ratio', c_uint8),
    ('reject_maxbad', c_uint8),
    ('tr_start', c_uint16),
    ('tr_stop', c_uint16),
    ('tr_avg_shift', c_uint16),
    ('averaging_mode', c_uint8),
    ('errors', c_uint32),
    ('corr_products_mask', c_uint16),
    ('actual_gain', c_uint8 * int(4)),
    ('actual_bitslice', c_uint8 * int(16)),
    ('spec_overflow', c_uint16),
    ('notch_overflow', c_uint16),
    ('ADC_stat', struct_ADC_stat * int(4)),
    ('spectrometer_enable', c_bool),
    ('calibrator_enable', c_bool),
    ('rand_state', c_uint32),
    ('weight', c_uint16),
    ('weight_current', c_uint16),
    ('num_bad_min_current', c_uint16),
    ('num_bad_max_current', c_uint16),
    ('num_bad_min', c_uint16),
    ('num_bad_max', c_uint16),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 121
class struct_cdi_stats(Structure):
    pass

struct_cdi_stats._pack_ = 1
struct_cdi_stats.__slots__ = [
    'cdi_total_command_count',
    'cdi_packets_sent',
    'cdi_bytes_sent',
]
struct_cdi_stats._fields_ = [
    ('cdi_total_command_count', c_uint32),
    ('cdi_packets_sent', c_uint32),
    ('cdi_bytes_sent', c_uint64),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 127
class struct_delayed_cdi_sending(Structure):
    pass

struct_delayed_cdi_sending._pack_ = 1
struct_delayed_cdi_sending.__slots__ = [
    'appId',
    'tr_appId',
    'int_counter',
    'format',
    'prod_count',
    'tr_count',
    'cal_count',
    'Nfreq',
    'Navgf',
    'packet_id',
    'cal_packet_id',
    'cal_appId',
    'cal_size',
    'cal_packet_size',
]
struct_delayed_cdi_sending._fields_ = [
    ('appId', c_uint32),
    ('tr_appId', c_uint32),
    ('int_counter', c_uint16),
    ('format', c_uint8),
    ('prod_count', c_uint8),
    ('tr_count', c_uint8),
    ('cal_count', c_uint8),
    ('Nfreq', c_uint16),
    ('Navgf', c_uint16),
    ('packet_id', c_uint32),
    ('cal_packet_id', c_uint32),
    ('cal_appId', c_uint32),
    ('cal_size', c_uint32),
    ('cal_packet_size', c_uint32),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 144
class struct_watchdog_config(Structure):
    pass

struct_watchdog_config._pack_ = 1
struct_watchdog_config.__slots__ = [
    'FPGA_max_temp',
    'watchdogs_enabled',
]
struct_watchdog_config._fields_ = [
    ('FPGA_max_temp', c_uint8),
    ('watchdogs_enabled', c_uint8),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 152
class struct_watchdog_packet(Structure):
    pass

struct_watchdog_packet._pack_ = 1
struct_watchdog_packet.__slots__ = [
    'unique_packet_id',
    'uC_time',
    'tripped',
]
struct_watchdog_packet._fields_ = [
    ('unique_packet_id', c_uint16),
    ('uC_time', c_uint64),
    ('tripped', c_uint8),
]

struct_core_state._pack_ = 1
struct_core_state.__slots__ = [
    'base',
    'cdi_stats',
    'cal',
    'cdi_dispatch',
    'timing',
    'watchdog',
    'cdi_wait_spectra',
    'avg_counter',
    'unique_packet_id',
    'leading_zeros_min',
    'leading_zeros_max',
    'housekeeping_request',
    'range_adc',
    'resettle',
    'request_waveform',
    'request_eos',
    'tick_tock',
    'drop_df',
    'heartbeat_packet_count',
    'flash_slot',
    'cmd_arg_high',
    'cmd_arg_low',
    'cmd_ptr',
    'cmd_end',
    'sequence_upload',
    'loop_depth',
    'loop_start',
    'loop_count',
    'cmd_counter',
    'dispatch_delay',
    'reg_address',
    'reg_value',
    'bitslicer_action_counter',
    'fft_time',
    'fft_computed',
]
struct_core_state._fields_ = [
    ('base', struct_core_state_base),
    ('cdi_stats', struct_cdi_stats),
    ('cal', struct_calibrator_state),
    ('cdi_dispatch', struct_delayed_cdi_sending),
    ('timing', struct_time_counters),
    ('watchdog', struct_watchdog_config),
    ('cdi_wait_spectra', c_uint16),
    ('avg_counter', c_uint16),
    ('unique_packet_id', c_uint32),
    ('leading_zeros_min', c_uint8 * int(16)),
    ('leading_zeros_max', c_uint8 * int(16)),
    ('housekeeping_request', c_uint8),
    ('range_adc', c_uint8),
    ('resettle', c_uint8),
    ('request_waveform', c_uint8),
    ('request_eos', c_uint8),
    ('tick_tock', c_bool),
    ('drop_df', c_bool),
    ('heartbeat_packet_count', c_uint32),
    ('flash_slot', c_int8),
    ('cmd_arg_high', c_uint8 * int(512)),
    ('cmd_arg_low', c_uint8 * int(512)),
    ('cmd_ptr', c_uint16),
    ('cmd_end', c_uint16),
    ('sequence_upload', c_bool),
    ('loop_depth', c_uint8),
    ('loop_start', c_uint16 * int(4)),
    ('loop_count', c_uint8 * int(4)),
    ('cmd_counter', c_uint32),
    ('dispatch_delay', c_uint16),
    ('reg_address', c_uint16),
    ('reg_value', c_int32),
    ('bitslicer_action_counter', c_int8),
    ('fft_time', c_uint32),
    ('fft_computed', c_bool),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 196
class struct_saved_state(Structure):
    pass

struct_saved_state._pack_ = 1
struct_saved_state.__slots__ = [
    'in_use',
    'cmd_arg_high',
    'cmd_arg_low',
    'cmd_ptr',
    'cmd_end',
    'CRC',
]
struct_saved_state._fields_ = [
    ('in_use', c_uint32),
    ('cmd_arg_high', c_uint8 * int(512)),
    ('cmd_arg_low', c_uint8 * int(512)),
    ('cmd_ptr', c_uint16),
    ('cmd_end', c_uint16),
    ('CRC', c_uint32),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 203
class struct_state_recover_notification(Structure):
    pass

struct_state_recover_notification._pack_ = 1
struct_state_recover_notification.__slots__ = [
    'slot',
    'size',
]
struct_state_recover_notification._fields_ = [
    ('slot', c_uint32),
    ('size', c_uint32),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 208
class struct_end_of_sequence(Structure):
    pass

struct_end_of_sequence._pack_ = 1
struct_end_of_sequence.__slots__ = [
    'unique_packet_id',
    'eos_arg',
]
struct_end_of_sequence._fields_ = [
    ('unique_packet_id', c_uint32),
    ('eos_arg', c_uint32),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 213
class struct_startup_hello(Structure):
    pass

struct_startup_hello._pack_ = 1
struct_startup_hello.__slots__ = [
    'SW_version',
    'FW_Version',
    'FW_ID',
    'FW_Date',
    'FW_Time',
    'unique_packet_id',
    'time_32',
    'time_16',
]
struct_startup_hello._fields_ = [
    ('SW_version', c_uint32),
    ('FW_Version', c_uint32),
    ('FW_ID', c_uint32),
    ('FW_Date', c_uint32),
    ('FW_Time', c_uint32),
    ('unique_packet_id', c_uint32),
    ('time_32', c_uint32),
    ('time_16', c_uint16),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 224
class struct_heartbeat(Structure):
    pass

struct_heartbeat._pack_ = 1
struct_heartbeat.__slots__ = [
    'packet_count',
    'time_32',
    'time_16',
    'TVS_sensors',
    'loop_count_min',
    'loop_count_max',
    'cdi_stats',
    'errors',
    'fft_time',
    'magic',
]
struct_heartbeat._fields_ = [
    ('packet_count', c_uint32),
    ('time_32', c_uint32),
    ('time_16', c_uint16),
    ('TVS_sensors', c_uint16 * int(4)),
    ('loop_count_min', c_uint16),
    ('loop_count_max', c_uint16),
    ('cdi_stats', struct_cdi_stats),
    ('errors', c_uint32),
    ('fft_time', c_uint32),
    ('magic', c_char * int(6)),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 237
class struct_meta_data(Structure):
    pass

struct_meta_data._pack_ = 1
struct_meta_data.__slots__ = [
    'version',
    'unique_packet_id',
    'base',
]
struct_meta_data._fields_ = [
    ('version', c_uint16),
    ('unique_packet_id', c_uint32),
    ('base', struct_core_state_base),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 243
class struct_housekeeping_data_base(Structure):
    pass

struct_housekeeping_data_base._pack_ = 1
struct_housekeeping_data_base.__slots__ = [
    'version',
    'unique_packet_id',
    'errors',
    'housekeeping_type',
]
struct_housekeeping_data_base._fields_ = [
    ('version', c_uint16),
    ('unique_packet_id', c_uint32),
    ('errors', c_uint32),
    ('housekeeping_type', c_uint16),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 250
class struct_housekeeping_data_0(Structure):
    pass

struct_housekeeping_data_0._pack_ = 1
struct_housekeeping_data_0.__slots__ = [
    'base',
    'core_state',
]
struct_housekeeping_data_0._fields_ = [
    ('base', struct_housekeeping_data_base),
    ('core_state', struct_core_state),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 255
class struct_housekeeping_data_1(Structure):
    pass

struct_housekeeping_data_1._pack_ = 1
struct_housekeeping_data_1.__slots__ = [
    'base',
    'ADC_stat',
    'actual_gain',
]
struct_housekeeping_data_1._fields_ = [
    ('base', struct_housekeeping_data_base),
    ('ADC_stat', struct_ADC_stat * int(4)),
    ('actual_gain', c_uint8 * int(4)),
]

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 265
for _lib in _libs.values():
    try:
        soft_reset_flag = (c_bool).in_dll(_lib, "soft_reset_flag")
        break
    except:
        pass

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 268
for _lib in _libs.values():
    if not _lib.has("core_loop", "cdecl"):
        continue
    core_loop = _lib.get("core_loop", "cdecl")
    core_loop.argtypes = [POINTER(struct_core_state)]
    core_loop.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 271
for _lib in _libs.values():
    if not _lib.has("process_cdi", "cdecl"):
        continue
    process_cdi = _lib.get("process_cdi", "cdecl")
    process_cdi.argtypes = [POINTER(struct_core_state)]
    process_cdi.restype = c_bool
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 275
for _lib in _libs.values():
    if not _lib.has("process_watchdogs", "cdecl"):
        continue
    process_watchdogs = _lib.get("process_watchdogs", "cdecl")
    process_watchdogs.argtypes = [POINTER(struct_core_state)]
    process_watchdogs.restype = c_bool
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 276
for _lib in _libs.values():
    if not _lib.has("cmd_soft_reset", "cdecl"):
        continue
    cmd_soft_reset = _lib.get("cmd_soft_reset", "cdecl")
    cmd_soft_reset.argtypes = [c_uint8, POINTER(struct_core_state)]
    cmd_soft_reset.restype = None
    break

# /home/anigmetov/code/coreloop/coreloop/core_loop.h: 279
for _lib in _libs.values():
    if not _lib.has("RFS_stop", "cdecl"):
        continue
    RFS_stop = _lib.get("RFS_stop", "cdecl")
    RFS_stop.argtypes = [POINTER(struct_core_state)]
    RFS_stop.restype = None
    break
